# dndice-rs

./: Cargo.toml  README.md
src/: dice.rs  lib.rs  log.rs  main.rs  parse.rs  scores.rs  stats.rs
tests/: cli.rs
