[package]
name = "dndice"
version = "0.2.3"
authors = ["Penn Bauman <pennbauman@protonmail.com>"]
edition = "2018"
description = "DnD format command line dice roller and statistics generator"
readme = "README.md"
repository = "https://github.com/pennbauman/dndice-rs"
license = "MIT"
keywords = ["dnd", "dice"]
categories = ["command-line-utilities", "games"]

[dependencies]
rand = "0.7"
colored = "2"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.2"
