[package]
name = "dndice"
version = "0.4.0"
authors = ["Penn Bauman <pennbauman@protonmail.com>"]
edition = "2021"
description = "DnD format command line dice roller and statistics generator"
readme = "README.md"
repository = "https://github.com/pennbauman/dndice-rs"
license = "MIT"
keywords = ["dnd", "dice"]
categories = ["command-line-utilities", "games"]

[dependencies]
rand = "0.8"
colored = "2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
